@@ -16,6 +16,7 @@ web_root =
 delay = 65
 method = renamer
 delete_failed = 0
+wait_for = 2
 
 
 [SickBeard]
