@@ -1,5 +1,13 @@
 Change_LOG / History
 
+VX.X
+
+Impacts All
+Add option to set the "wait_for" period. This is how long the script waits to see if the movie changes status in CouchPotato.
+
+Impacts Torrents
+Fixed Delete_Original option
+
 V8.1 04/05/2013
 
 Impacts All
